--- a/booking/templates/booking/about.html
+++ b/booking/templates/booking/about.html
@@ -5,7 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<h2>Greetings {{ user_first_name }}!</h2>
-<h1>This is the Booking Application landing page</h1>
+This is the about page
 </body>
 </html>
