--- a/booking/templates/booking/home.html
+++ b/booking/templates/booking/home.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h2>Greetings {{ user_first_name }}!</h2>
+{% extends "./base.html" %}
+{% block content %}
 <h1>This is the Booking Application landing page</h1>
-</body>
-</html>
+<ul class="list-group">
+    {% for room in rooms %}
+        <li class="list-group-item">{{ room }}</li>
+    {% endfor %}
+</ul>
+{% endblock %}
