--- a/booking/templates/booking/base.html
+++ b/booking/templates/booking/base.html
@@ -5,11 +5,19 @@
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
+    <style>
+        #outerpadding {
+            padding-top:80px;
+            padding-left:50px;
+            padding-right:50px;
+        }
+    </style>
+
 </head>
 <body>
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Fixed navbar</a>
+        <a class="navbar-brand" href="#">TheRyanHotel </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -32,6 +40,7 @@
         </div>
     </div>
 </nav>
+<div id="outerpadding">
 
 {% if loggedin %}
     <h2>Greetings {{ user_first_name }}!</h2>
@@ -41,7 +50,7 @@
 
 {% block content %}
 {% endblock %}
-
+</div>
 
 @copyright ryan 2021
 </body>
